# yourcuinfo

./: .empty.txt.swp  .gitignore  2016-09-26-CSCI.html  CNAME  LICENSE  README.md  class_data.json  class_data.txt  class_search.html  data_test.json  datatables.js  empty.txt  index.html
data/: class_data.json  detailed_data.json  fall_2018.json  simple_data.json  spring_2019.json  summer_2018.json
docs/: class_data.json
json/: catalog.json  classes.json
mycuinfo_html/: ACCT.html  AIRR.html  ANTH.html  APPM.html  APRD.html  ARAB.html  ARCH.html  AREN.html  ARSC.html  ARTF.html  ARTH.html  ARTS.html  ASEN.html  ASIA.html  ASTR.html  ATLS.html  ATOC.html  BADM.html  BASE.html  BCOR.html  BSLW.html  BUSM.html  CAMW.html  CEES.html  CESR.html  CHEM.html  CHEM2.html  CHEN.html  CHIN.html  CLAS.html  CMCI.html  CMDP.html  COEN.html  COML.html  COMM.html  COMR.html  CSCI.html  CSVC.html  CVEN.html  CWCV.html  (+91 more)
raw_html/: 2016-10-09-ACCT.html  2016-10-09-AIRR.html  2016-10-09-ANTH.html  2016-10-09-APPM.html  2016-10-09-APRD.html  2016-10-09-ARAB.html  2016-10-09-ARCH.html  2016-10-09-AREN.html  2016-10-09-ARSC.html  2016-10-09-ARTF.html  2016-10-09-ARTH.html  2016-10-09-ASIA.html  2016-10-09-ASTR.html  2016-10-09-ATLS.html  (+22 more)
src/scraper/: Cargo.toml  example.json
src/scraper/migrations/2019-08-18-014326_constants/: down.sql  up.sql
src/scraper/migrations/2019-08-28-053109_classes/: down.sql  up.sql
src/scraper/migrations/2019-08-29-044002_students/: down.sql  up.sql
src/scraper/src/: lib.rs  models.rs  schema.rs  scraper.rs
src/scraper/src/scraper/: json.rs
(+756 files in other folders)
