[package]
name = "db"
version = "0.1.0"
authors = ["Alexander Curtiss <apccurtiss@gmail.com>"]
edition = "2018"

[dependencies]
argparse = "0.2.2"
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.9.0"
json = "0.11.15"
reqwest = "0.9.20"
serde_json = "1.0.40"
serde = "1.0.99"
futures = "0.1"
regex = "1"
lazy_static = "1.2.0"
chrono = "0.4.9"
log = "0.4.8"
 